# discord_scamming_scheme

./: Cargo.toml  README.md
src/: main.rs
src/discord/: bot.rs  mod.rs
src/discord/datatypes/: attachment.rs  message.rs  mod.rs
src/ftp/: limited_reader.rs  metadata.rs  mod.rs
